🔐 IMPLEMENTED: Sistema de Seguridad Completa Anti-Hackers
🛡️ PROTECCIONES IMPLEMENTADAS:

1. SQL INJECTION - PREVENCIÓN 100%
   ✅ Prepared Statements en todas las queries
   ✅ Detección de patrones maliciosos
   ✅ Validación de caracteres especiales
   ✅ Logs de intentos de ataque

2. BRUTE FORCE - PROTECCIÓN MÁXIMA
   ✅ Rate Limiting en Login (5 intentos/15min)
   ✅ Rate Limiting General (100 req/15min)
   ✅ Rate Limiting Crítico (20 req/5min)
   ✅ Bloqueo automático de IPs sospechosas

3. XSS (Cross-Site Scripting) - BLOQUEADO
   ✅ Sanitización automática de inputs
   ✅ Validación de tipos de datos
   ✅ Headers CSP (Content Security Policy)
   ✅ Eliminación de tags HTML y scripts

4. CSRF (Cross-Site Request Forgery) - BLOQUEADO
   ✅ Validación de origen de requests
   ✅ Lista blanca de dominios permitidos
   ✅ Logs de orígenes sospechosos

5. HEADERS DE SEGURIDAD - HELMET.JS
   ✅ X-Content-Type-Options: nosniff
   ✅ X-Frame-Options: SAMEORIGIN
   ✅ X-XSS-Protection: 1; mode=block
   ✅ Strict-Transport-Security
   ✅ Content-Security-Policy
   ✅ X-Powered-By removed

6. VALIDACIÓN Y SANITIZACIÓN
   ✅ Express-validator en todas las rutas
   ✅ Validación de email, password, IDs
   ✅ Sanitización de strings
   ✅ Límites de longitud
   ✅ Regex patterns para caracteres permitidos

7. LOGS DE AUDITORÍA
   ✅ Registro de todas las requests
   ✅ Tracking de operaciones sensibles
   ✅ Logs de intentos de ataque
   ✅ IP, timestamp, user-agent

📄 ARCHIVOS CREADOS/MODIFICADOS:
- api/middleware/security.ts (NUEVO)
  • 7 middlewares de seguridad
  • 10+ funciones de validación
  • Rate limiters configurables
  • Sanitización y validación

- api/app.ts (ACTUALIZADO)
  • Helmet.js implementado
  • CORS configurado
  • Rate limiting aplicado
  • SQL Injection prevention
  • Origin validation
  • Security logging

- api/routes/auth.ts (ACTUALIZADO)
  • Login con rate limiter (5/15min)
  • Validación de email/password
  • Cambio de contraseña protegido
  • Logs de intentos fallidos

-

--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
     "framer-motion": "^12.23.24",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "html2canvas": "^1.4.1",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
@@ -45,6 +50,7 @@
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.2",
     "xlsx": "^0.18.5",
+    "xss-clean": "^0.1.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
